2007-10-01  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added an optional task for rcov code coverage.
	  Added a dependency for rake in the Gem Specification.

	* test/test_binarytree.rb: Removed the unnecessary dependency on "Person" class.

	* test/test_tree.rb: Removed dependency on the redundant "Person" class.

2007-08-30  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_tree.rb (TC_TreeTest::test_preordered_each, TC_TreeTest::test_breadth_each, TC_TreeTest::test_detached_copy):
	Added new tests for the new functions added to tree.rb.

	* lib/tree.rb (Tree::TreeNode::detached_copy, Tree::TreeNode::preordered_each, Tree::TreeNode::breadth_each):
	Added new functions for returning a detached copy of the node and
	for performing breadth first traversal. Also added the pre-ordered
	traversal function which is an alias of the existing 'each' method.

	* test/test_binarytree.rb (TC_BinaryTreeTest::test_swap_children):
	Added a test case for the children swap function.

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::swap_children):
	Added new function to swap the children. Other minor changes in
	comments and code.

2007-07-18  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::leftChild /
	rightChild): Minor cosmetic change on the parameter name.

	* test/testbinarytree.rb (TC_BinaryTreeTest::test_isLeftChild):
	Minor syntax correction.

	* lib/tree.rb (Tree::TreeNode::depth): Added a tree depth
	computation method.
	(Tree::TreeNode::breadth): Added a tree breadth method.

	* test/testtree.rb (TC_TreeTest::test_depth/test_breadth): Added a
	test for the depth and breadth method.

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::is*Child):
	Added tests for determining whether a node is a left or right
	child.

	* test/testbinarytree.rb: Added the test cases for the binary tree
	implementation.
	(TC_BinaryTreeTest::test_is*Child): Added tests for right or left
	childs.
